# glvideo

./: .gitignore  LICENSE.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: FaceTracker.cpp  native-lib.cpp
core/src/main/cpp/alignment/: CMakeLists.txt  cfan.cpp  face_alignment.cpp
core/src/main/res/drawable-xxxhdpi/: timeline_thumb.xml
core/src/main/res/layout/: layout_timeline_bar.xml  layout_timeline_playing_thumb.xml
core/src/main/res/raw/: camera_blur_fragment_shader.glsl  camera_fragment_shader.glsl  camera_vertex_shader.glsl  clip_texture_fragment_shader.glsl  rc_texture_fragment_shader.glsl  rc_texture_vertex_shader.glsl  simple_vertex_shader.glsl  texture_fragment_shader.glsl
core/src/main/res/values/: attrs.xml  dimens.xml
ffmpeg-kit/: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
libs/ffmpeg-kit/arm64-v8a/include/: config.h
libs/ffmpeg-kit/arm64-v8a/include/libavutil/: frame.h
libs/ffmpeg-kit/armeabi-v7a/include/: config.h
libs/ffmpeg-kit/armeabi-v7a/include_neon/: config.h
libs/ffmpeg-kit/x86/include/: config.h
libs/ffmpeg-kit/x86/include/libavutil/: frame.h
libs/ffmpeg-kit/x86_64/include/: config.h
libs/ffmpeg/arm64-v8a/include/: config.h
libs/ffmpeg/armeabi-v7a/include/: config.h
libs/ffmpeg/x86/include/: config.h
libs/ffmpeg/x86_64/include/: config.h
sample-app/: build.gradle  proguard-rules.pro
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/assets/bgm/: bgm.aac
sample-app/src/main/cpp/: CMakeLists.txt  ffmpeg_player.c  ffmpeg_player.h  player_callbacks.c  player_callbacks.h  player_interface.cpp  player_interface.h  sample_app.cpp  sample_player.cpp  sample_player.h
sample-app/src/main/cpp/player/: BaseObject.h  BufferingManager.cpp  BufferingManager.h  CallbackManager.cpp  CallbackManager.h  CallbackType.h  Components.h  Config.h  DependencyObject.h  Graph.h  GraphManager.cpp  GraphManager.h  IQvodPlayer.h  ISamplePool.h  MediaGraph.h  MediaObject.cpp  MediaObject.h  MemRing.h  Message.cpp  Message.h  ParamType.h  PlayerGraphManager.cpp  PlayerGraphManager.h  QvodPlayer.cpp  QvodPlayer.h  RefClock.h  SamplePool.h  SysConsts.h  Utils.h  Utinities.h
sample-app/src/main/cpp/player/components/: AudioRenderer.cpp  AudioRenderer.h  CompInterfaces.h  ComponentsListener.h  FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  FFmpegCallbacks.cpp  FFmpegCallbacks.h  FFmpegData.h  FFmpegDemuxer.cpp  FFmpegDemuxer.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  Frame.cpp  Frame.h  FrameCapturer.cpp  FrameCapturer.h  GUIDs.h  Global.cpp  Global.h  Pools.cpp  Pools.h  PreviewDemuxer.cpp  PreviewDemuxer.h  VideoRenderer.cpp  VideoRenderer.h
sample-app/src/main/cpp/player/utils/: BaseTypes.h  BlockingQueue.h  Error.h  Event.h  FileLog.h  Lock.h  QString.cpp  QString.h  QTime.h  Thread.cpp  Thread.h
sample-app/src/main/res/anim/: activity_bottom_to_center_anim.xml  (+6 more)
(+385 files in other folders)
